<resources>
    <string name="app_name">Ideal Octo Doodle</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="london">London</string>
    <string name="paris">Paris</string>
    <string name="tokyo">Tokyo</string>
    <string name="mirror">Mirror</string>
    <string name="skane">Skane</string>
</resources>
